# solana-staking

./: Anchor.toml  README.md  package.json
cli/: index.ts  test-staking-machine.json
programs/skinflip-staking/: Cargo.toml
programs/skinflip-staking/src/: lib.rs
tests/: skinflip-staking.ts
tests/keypairs/: nft-owner.json  test.json
utils/: programs.ts
